--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,11 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "@next/next/no-html-link-for-pages": "off"
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_",
+      "ignoreRestSiblings": true
+    }],
+    "@next/next/no-html-link-for-pages": "error"
   }
 }
