--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,11 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-unused-vars": ["error", {
+    "@typescript-eslint/no-unused-vars": ["warn", {
       "argsIgnorePattern": "^_",
       "varsIgnorePattern": "^_",
       "ignoreRestSiblings": true
     }],
-    "@next/next/no-html-link-for-pages": "error"
+    "@next/next/no-html-link-for-pages": "off"
   }
 }
